[Windows] Incorrect DLL Linkage for JSC ArrayBuffer and ArrayBufferView https://bugs.webkit.org/show_bug.cgi?id=119847

Reviewed by Oliver Hunt.

* runtime/ArrayBuffer.h: Switch from WTF_EXPORT_PRIVATE to JS_EXPORT_PRIVATE
* runtime/ArrayBufferView.h: Ditto.


Canonical link: https://commits.webkit.org/137800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154119 268f45cc-cd09-0410-ab3c-d52691b4dbfc